force-app/main/default/objects/Certificate_request__c/Certificate_request__c.object-meta.xml
<CustomObject>
    <label>Certificate request</label>
    <nameField>
        <label>Certificate request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certificate requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>