force-app/main/default/objects/Certificate_request__c/fields/Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type__c</fullName>
    <label>Certificate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bonafide</fullName>
            </value>
            <value>
                <fullName>TC</fullName>
            </value>
            <value>
                <fullName>Conduct</fullName>
            </value>
            <value>
                <fullName>Course Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>