force-app/main/default/objects/Certificate_request__c/fields/Request_No__c.field-meta.xml
<CustomField>
    <fullName>Request_No__c</fullName>
    <displayFormat>PS-{000}</displayFormat>
    <label>Request No</label>
    <type>AutoNumber</type>
</CustomField>