force-app/main/default/objects/Certificate_request__c/fields/Student1__c.field-meta.xml
<CustomField>
    <fullName>Student1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student1</label>
    <referenceTo>Student1__c</referenceTo>
    <relationshipLabel>Certificate requests</relationshipLabel>
    <relationshipName>Certificate_requests</relationshipName>
    <type>Lookup</type>
</CustomField>