force-app/main/default/objects/Certificate_request__c/validationRules/Approved_By_required_if_Status_is_Approv.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_By_required_if_Status_is_Approv</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Approved&quot;),
ISBLANK(User__c)
)</errorConditionFormula>
    <errorMessage>Select Approver.</errorMessage>
</ValidationRule>