force-app/main/default/objects/Certificate_request__c/validationRules/Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Reason__c)</errorConditionFormula>
    <errorMessage>Enter Reason.</errorMessage>
</ValidationRule>