force-app/main/default/objects/Certificate_request__c/validationRules/Required_Date_cannot_be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Date_cannot_be_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Required_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Required Date should be today or later.</errorMessage>
</ValidationRule>